--- a/app/src/main/res/layout/fragment_update_human.xml
+++ b/app/src/main/res/layout/fragment_update_human.xml
@@ -60,7 +60,8 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:hint="@string/hint_age"
-            android:inputType="number" />
+            android:inputType="number"
+            android:maxLength="3"/>
 
     </com.google.android.material.textfield.TextInputLayout>
 
